java11用に書き換え