@@ -36,47 +36,56 @@ public class JudgeController{
                 }
             }
         });
-        String themeText = switch (themeKey) {
-            case "oracle" -> "神託";
-            case "propose" -> "プロポーズ";
-            case "begging" -> "命乞い";
-            default -> "???";
-        };
+        String themeText;
+        switch (themeKey) {
+            case "oracle":
+                themeText = "神託";
+                break;
+            case "propose":
+                themeText = "プロポーズ";
+                break;
+            case "begging":
+                themeText = "命乞い";
+                break;
+            default:
+                themeText = "???";
+        }
         new Thread(() -> {
             // ここはバックグラウンドスレッド（画面をフリーズさせない）
-            var response = mainCtrl.connectGemini.connect("""
-                # 指示
-                ロールプレイをします。他プレイヤーが作成した心打たれる文章をジャッチするのが、あなたの役目です。
-                以下の「入力データ」「ルール」をもとに文章を評価し、「出力形式」に従って結果を返してください。
-
-                # 入力データ
-                - テーマ：(例：神託、プロポーズ、命乞い)
-                - 文章：(プレイヤーが作成した文章)
-
-                # 判定ルール
-                ## ステップ1：文法チェック
-                文章が日本語として到底理解不能、または意味不明な単語の羅列である場合は、0点としてください。
-
-            ## ステップ2：点数の算出
-            以下の基準によって、**0〜100点**で点数を出してください。
-            - テーマに沿っているか？
-            - 文章として面白いか？（意外性、シュールさ、切実さ）
-            - 同じ文章に対しては常に同じ点数になるよう、厳格に評価する
-
-            ## ステップ3：コメント生成
-            あなたは「そのテーマを信奉する信者」または「評価者」になりきってください。
-            送られた文章に対し、30〜40字程度の短いコメントを書いてください。
-            - 分析的視点(4割)と感情的視点(6割)を混ぜて、少し砕けた口調で話してください
-            - 0点の場合は、辛辣にツッコミを入れてください
-
-                # 出力形式
-                点数とコメントをjson形式で返してください。
-
-                # 今回の入力
-                テーマ：%s
-                文章：%s
-                """.formatted(themeText, createdText)
+            String prompt = String.format(
+                "# 指示\n" +
+                "ロールプレイをします。他プレイヤーが作成した心打たれる文章をジャッチするのが、あなたの役目です。\n" +
+                "以下の「入力データ」「ルール」をもとに文章を評価し、「出力形式」に従って結果を返してください。\n" +
+                "\n" +
+                "# 入力データ\n" +
+                "- テーマ：(例：神託、プロポーズ、命乞い)\n" +
+                "- 文章：(プレイヤーが作成した文章)\n" +
+                "\n" +
+                "# 判定ルール\n" +
+                "## ステップ1：文法チェック\n" +
+                "文章が日本語として到底理解不能、または意味不明な単語の羅列である場合は、0点としてください。\n" +
+                "\n" +
+                "## ステップ2：点数の算出\n" +
+                "以下の基準によって、**0〜100点**で点数を出してください。\n" +
+                "- テーマに沿っているか？\n" +
+                "- 文章として面白いか？（意外性、シュールさ、切実さ）\n" +
+                "- 同じ文章に対しては常に同じ点数になるよう、厳格に評価する\n" +
+                "\n" +
+                "## ステップ3：コメント生成\n" +
+                "あなたは「そのテーマを信奉する信者」または「評価者」になりきってください。\n" +
+                "送られた文章に対し、30〜40字程度の短いコメントを書いてください。\n" +
+                "- 分析的視点(4割)と感情的視点(6割)を混ぜて、少し砕けた口調で話してください\n" +
+                "- 0点の場合は、辛辣にツッコミを入れてください\n" +
+                "\n" +
+                "# 出力形式\n" +
+                "点数とコメントをjson形式で返してください。\n" +
+                "\n" +
+                "# 今回の入力\n" +
+                "テーマ：%s\n" +
+                "文章：%s\n",
+                themeText, createdText
             );
+            var response = mainCtrl.connectGemini.connect(prompt);
 
             // 3. 通信が終わったら、画面更新処理をEDTに依頼する
             SwingUtilities.invokeLater(() -> {
@@ -176,28 +185,44 @@ public class JudgeController{
             return;
         }
 
-        String timeText = switch (themeKey) {
-            case "oracle" -> "聖なるお告げ";
-            case "propose" -> "プロポーズ中";
-            case "begging" -> "命乞い中";
-            default -> "???";
-        };
+        String timeText;
+        switch (themeKey) {
+            case "oracle":
+                timeText = "聖なるお告げ";
+                break;
+            case "propose":
+                timeText = "プロポーズ中";
+                break;
+            case "begging":
+                timeText = "命乞い中";
+                break;
+            default:
+                timeText = "???";
+        }
 
-        String personText = switch (themeKey) {
-            case "oracle" -> "神";
-            case "propose" -> "俺";
-            case "begging" -> "俺";
-            default -> "???";
-        };
+        String personText;
+        switch (themeKey) {
+            case "oracle":
+                personText = "神";
+                break;
+            case "propose":
+                personText = "俺";
+                break;
+            case "begging":
+                personText = "俺";
+                break;
+            default:
+                personText = "???";
+        }
 
-        String text = """
-#ぼっちAIコミュレーター
-
-【%s】
-%s「%s」
-
-★☆衝撃のAI審査結果は...こちらでした！☆★
-%s""".formatted(timeText, personText, createdText, urlToShare);       
+        String text = String.format(
+            "#ぼっちAIコミュレーター\n\n" +
+            "【%s】\n" +
+            "%s「%s」\n\n" +
+            "★☆衝撃のAI審査結果は...こちらでした！☆★\n" +
+            "%s",
+            timeText, personText, createdText, urlToShare
+        );       
         String url = "https://twitter.com/intent/tweet?text=" + URLEncoder.encode(text, StandardCharsets.UTF_8);
         Desktop.getDesktop().browse(URI.create(url));
     }
